# python-cookiecutter

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .gitattributes  .gitignore  pyproject.toml  setup.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  _version.py  {{cookiecutter.project_slug}}.py
