[project]
name = "{{cookiecutter.project_slug}}"
authors = [
{ name="{{cookiecutter.author}}", email="{{cookiecutter.email}}" },
]
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy",
]
dynamic = [
  "version",
]

[project.urls]
Homepage = "https://github.com/{{cookiecutter.github_repo_user}}/{{cookiecutter.project_slug}}"
Issues = "https://github.com/{{cookiecutter.github_repo_user}}/{{cookiecutter.project_slug}}/issues"

[build-system]
requires = ["setuptools", "versioneer[toml]==0.29"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "{{cookiecutter.project_slug}}/_version.py"
versionfile_build = "{{cookiecutter.project_slug}}/_version.py"
tag_prefix = ""
parentdir_prefix = "{{cookiecutter.project_slug}}-"

